add mp4 resource

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- Custom player thanks to https://css-tricks.com/infinite-all-css-scrolling-slideshow/ -->
 
+    <!-- Songs dwnl from https://www.mp3juices.cc/ -->
+
     <div class="ccc">
         <h4> Thriller </h4>
         <p class="slide"> Michael Jackson </p>
