add resource for svg icon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <!-- Songs dwnl from https://www.mp3juices.cc/ -->
 
+    <!-- svg icons from https://heroicons.com/ -->
+
     <div class="ccc">
         <h4> Thriller </h4>
         <p class="slide"> Michael Jackson </p>
