--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>My Custom Audio Player</title>
 </head>
 <body>
@@ -23,21 +24,22 @@
 
     <!-- svg icons from https://heroicons.com/ -->
 
-    <div class="ccc">
-        <h4> Thriller </h4>
-        <p class="slide"> Michael Jackson </p>
-    </div>
     <div> 
-        <button onclick="document.getElementById('player').play()">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" 
-            id="play-btn">
-            <!-- fill="currentColor" -->
-                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clip-rule="evenodd" />
-            </svg>
+        <button id="play-btn">
+            play
         </button> 
+        <!-- <button onclick="document.getElementById('player').play()">
+            play
+        </button>  -->
         <button onclick="document.getElementById('player').pause()">Pause</button> 
         <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
         <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button> 
+    </div>
+    
+    
+    <div class="ccc">
+        <h4> Thriller </h4>
+        <p class="slide"> Michael Jackson </p>
     </div>
 
 
