--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
     <!-- svg icons from https://heroicons.com/ -->
 
-    <audio id="player" src="/assets/songs/Thriller-Michael_Jackson.mp4"></audio>
+    <div id="listen" style="background-color: teal; color: white; cursor: pointer;">Listen to playlist</div>
+
+    <audio id="player"></audio>
 
     <div> 
         <img id="control-btn"
