feat(player) : custom volume

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
     <!-- svg icons from https://heroicons.com/ -->
 
     <div id="listen" style="background-color: teal; color: white; cursor: pointer;">Listen to playlist</div>
+    <p style="color: tomato;">!! First click on "listen" to load audio source !!</p>
 
     <audio id="player"></audio>
 
     <div> 
         <img id="control-btn"
         src="/assets/images/play-icon.svg" alt="Play / Pause icon"/>
-        <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
-        <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button> 
+        <!-- <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
+        <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button>  -->
+        <input id="volumeslider" type="range" min="0" max="100" value="100" step="1">
     </div>
     
     
