fix(volume) + feat(seek)

--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
     <div> 
         <img id="control-btn"
         src="/assets/images/play-icon.svg" alt="Play / Pause icon"/>
-        <!-- <button onclick="document.getElementById('player').volume += 0.1">Vol +</button> 
-        <button onclick="document.getElementById('player').volume -= 0.1">Vol -</button>  -->
-        <input id="volumeslider" type="range" min="0" max="100" value="100" step="1">
     </div>
-    
+    <div>
+        <input id="volumeslider" type="range" min="0" max="100" step="1">
+    </div>
+    <div>
+        <input id="seekslider" type="range" min="0"
+        value="0"
+        step="1">
+        <!--max="100"-->
+    </div>
     
     <div class="slider-container">
         <h4> Thriller </h4>
