--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </div>
     <div>
         <input id="seekslider" type="range" min="0"
-        value="0"
-        step="1">
+        value="0">
         <!--max="100"-->
     </div>
     
